# ai-ml-workshop

./: 00_context.md  00_problem_definition.md  01_data_representation.ipynb  01_labeling.ipynb  02_data_wrangling.ipynb  02_labelling.ipynb  03_data_preparation.ipynb  04_model_exploration.ipynb  05_deployment.md  Dockerfile  Makefile  README.md  pyproject.toml
src/: flair_ner.py  gpt_ner.py  regex_ner.py  utils.py
